tests/snapshots/run_wpt_conformance__coreml_maxPool2d_float32_4D_tensor_options_dilations_with_options_strides.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
maxPool2d.https.any.js maxPool2d float32 4D tensor options.dilations with options.strides, coreml
 Failed to build graph: graph conversion failed for coreml_mlprogram: CoreML pooling currently supports only NCHW layout; got 'nhwc' for maxPool2d

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    maxPool2dInput: f32[1, 7, 7, 2];
  }

  nodes {
    [maxPool2dOutput] = maxPool2d(maxPool2dInput, dilations=[1, 1], label="", layout="nhwc", outputShapeRounding="", outputSizes=null, padding=[1, 0, 0, 1], strides=[2, 2], windowDimensions=[3, 3]);
  }

  outputs { maxPool2dOutput; }
}
