tests/snapshots/run_wpt_conformance__coreml_maxPool2d_float32_4D_tensor_options_layout_nchw.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
maxPool2d.https.any.js maxPool2d float32 4D tensor options.layout=nchw, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type max_pool: Required param 'pad' is missing

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    maxPool2dInput: f32[1, 2, 5, 5];
  }

  nodes {
    [maxPool2dOutput] = maxPool2d(maxPool2dInput, dilations=[], label="", layout="nchw", outputShapeRounding="", outputSizes=null, padding=[], strides=[], windowDimensions=null);
  }

  outputs { maxPool2dOutput; }
}
